simple-splunk-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
  labels:
    app.kubernetes.io/name: simple-splunk-web
    app.kubernetes.io/version: 9.0.0
    app.kubernetes.io/instance: simple-splunk
    app.kubernetes.io/managed-by: ArgoCD
  name: simple-splunk-standalone-web
spec:
  ingressClassName: traefik
  rules:
  - host: splunk.arroyo.turnbros.app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: splunk-simple-splunk-standalone-service
            port:
              number: 8000
  tls:
  - secretName: splunk-splunkweb-tls
    hosts:
    - splunk.arroyo.turnbros.app

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
  labels:
    app.kubernetes.io/name: simple-splunk-hec
    app.kubernetes.io/version: 9.0.0
    app.kubernetes.io/instance: simple-splunk
    app.kubernetes.io/managed-by: ArgoCD
  name: simple-splunk-standalone-hec
spec:
  ingressClassName: traefik
  rules:
  - host: splunk-hec.arroyo.turnbros.app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: splunk-simple-splunk-standalone-service
            port:
              number: 9088
  tls:
  - secretName: splunk-splunkhec-tls
    hosts:
    - splunk-hec.arroyo.turnbros.app
